--- a/app/views/weekly.html.erb
+++ b/app/views/weekly.html.erb
@@ -134,12 +134,14 @@
       
       <!-- cash flow totals week,month -->
       <div class="span-6 mhat-cell-hello mhat-color-4">&nbsp;</div>
-      <div class="span-3 mhat-cell-hello mhat-color-2">X</div>
-      <div class="span-3 mhat-cell-hello mhat-color-4">X</div>
-      <div class="span-3 mhat-cell-hello mhat-color-2">0</div>
-      <div class="span-3 mhat-cell-hello mhat-color-2">0</div>
-      <div class="span-3 mhat-cell-hello mhat-color-2">0</div>
-      <div class="span-3 mhat-cell-hello mhat-color-4 last">Y</div>
+      <% @tstats.each_week do |week,total,count| %>
+        <% if @today.day > week[0].day && @today.day < week[1].day %>
+        <div class="span-3 mhat-cell-hello mhat-color-4"><%= total.round %></div>
+        <% else %>
+        <div class="span-3 mhat-cell-hello mhat-color-2"><%= total.round %></div>
+        <% end %>
+      <% end %>
+      <div class="span-3 mhat-cell-hello mhat-color-4 last"><%= @tstats.total.round %></div>
       
     </div>
   </div>
