--- a/app/views/weekly.html.erb
+++ b/app/views/weekly.html.erb
@@ -46,6 +46,7 @@
     .mhat-color-2 { color: #666; }
     .mhat-color-3 { color: #444; }
     .mhat-color-4 { color: #222; }
+    .mhat-color-Z { color: #a00; }
     
     
   </style>
@@ -84,13 +85,14 @@
       
       <!-- target name, target, spent, remaining: iterate -->
       <% @targets.each_with_index do |target,idx| %>
+      <% color = target.real_amount_remaining < 0 ? 'mhat-color-Z' : 'mhat-color-4' %>
       <div class="span-4 mhat-target <%= idx == @targets.size-1 ? 'last' : '' %>">
         <div class="mhat-target-name   mhat-color-0"><%= target.tag %></div>
         <div class="mhat-target-number mhat-color-2"><%= target.monthly_limit.round %></div>
         <div class="mhat-target-word   mhat-color-1">target</div>
-        <div class="mhat-target-number mhat-color-3"><%= (target.monthly_limit-target.amount_remaining).round %></div>
+        <div class="mhat-target-number mhat-color-3"><%= target.amount_spent.round %></div>
         <div class="mhat-target-word   mhat-color-1 mhat-divider-0">spent</div>
-        <div class="mhat-target-number mhat-color-4"><%= target.amount_remaining.round %></div>
+        <div class="mhat-target-number <%= color %>"><%= target.real_amount_remaining.round %></div>
         <div class="mhat-target-word   mhat-color-1">remaining</div>
       </div>
       <% end %>
